outilined home page

--- a/index.html
+++ b/index.html
@@ -2,8 +2,58 @@
 
 <html>
 <head>
-  <title></title>
+  <title>Pat's Salmon Cookies</title>
+  <link href= "styles.css" rel= "stylesheet"/>
 </head>
 <body>
+  <header>
+    <img src= "https://github.com/DeltaVCode/cr-201-2017/raw/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png"/>
+  </header>
+  <div>
+    <nav>
+      <ul>
+        <li><a href= "index.html">Home</a></li>
+        <li><a href= "stores.html">Sales</a></li>
+      </ul>
+    </nav>
+  </div>
+
+  <h2>Locations</h2>
+  <ul>
+    <li>First and Pike</li>
+    <li>Sea Tac Airport</li>
+    <li>Seattle Center</li>
+    <li>Capitol Hill</li>
+    <li>Alki</li>
+  </ul>
+
+  <h2>Hours</h2>
+  <p>
+    All locations are currently open from 6am to 8pm 7 days a week.
+  </p>
+  <h2>Contact Us</h2>
+  <p>
+    First and Pike store:
+    123 Pike St
+    Seattle, WA 98101
+    Phone number: 321-555-4513
+
+    Sea Tac Airport store:
+    17801 International Blvd,
+    Seattle, WA 98158
+    Phone number: 434-555-8392
+
+    Seattle Center
+    Address:
+    Phone number:
+
+    Capitol Hill
+    Address:
+    Phone number:
+
+    Alki store:
+    Address:
+    Phone number:
+  </p>
 </body>
 </html>
