added to AddStore prototype, outlined stores html doc, added some notes to index html doc

--- a/index.html
+++ b/index.html
@@ -32,29 +32,7 @@
     All locations are currently open from 6am to 8pm 7 days a week.
   </p>
   <h2>Contact Us</h2>
-  <p>
-    <!--put in model-->
-    First and Pike store:
-    123 Pike St
-    Seattle, WA 98101
-    Phone number: 321-555-4513
+  <!--stretch goal-->
 
-    Sea Tac Airport store:
-    17801 International Blvd,
-    Seattle, WA 98158
-    Phone number: 434-555-8392
-
-    Seattle Center
-    Address:
-    Phone number:
-
-    Capitol Hill
-    Address:
-    Phone number:
-
-    Alki store:
-    Address:
-    Phone number:
-  </p>
 </body>
 </html>
