--- a/stores.html
+++ b/stores.html
@@ -8,8 +8,12 @@
     <h1>Beautiful cookies</h1>
   </header>
   <table>
-    <!--Use dom manipulation to get info here-->
+    <thead id= "store-locations">
+    </thead>
+    <tbody id= "table-body">
+    </tbody>
   </table>
-<script src= "model.js"></script>
+  <script src= "model.js"></script>
+  <script src= "stores.js"></script>
 </body>
 </html>
