initial day 8 commit

--- a/stores.html
+++ b/stores.html
@@ -13,6 +13,15 @@
     <tbody id= "table-body">
     </tbody>
   </table>
+
+  <fieldset>
+    <legend>Add a store:</legend>
+    <form>
+      <input type= "text"/>
+      <input type="text" name="" value=""/>
+    </form>
+  </fieldset>
+
   <script src= "model.js"></script>
   <script src= "stores.js"></script>
 </body>
