worked hard on generating this table

--- a/stores.html
+++ b/stores.html
@@ -8,13 +8,12 @@
     <h1>Beautiful cookies</h1>
   </header>
   <table>
-    <thead id= "store-locations">
-      <tr></tr>
+    <thead id= "table-header">
     </thead>
     <tbody id= "table-body">
     </tbody>
   </table>
-  <form action="https://requestb.in/1ej5fes1" method="POST">
+  <form action="https://requestb.in/q7bkf7q7" method="POST">
     <fieldset>
       <legend>Add a store:</legend>
       <ul>
@@ -24,15 +23,19 @@
         </li>
         <li>
           <label class= "new-store-label">Min. Customers/Hour:</label>
-          <input type="text" name="" value=""/>
+          <input type="text" name="minCustomers"/>
         </li>
         <li>
           <label class= "new-store-label">Max. Customers/Hour:</label>
-          <input type="text" name="" value=""/>
+          <input type="text" name="maxCustomers"/>
         </li>
         <li>
           <label class= "new-store-label">Avg. Cookies Purchased/Hour:</label>
-          <input type="text" name="" value=""/>
+          <input type="text" name="avgPurchased"/>
+        </li>
+        <li>
+          <label>Submit Button</label>
+          <input type= "submit" value= "Submit Button"/>
         </li>
       </ul>
     </fieldset>
