click event is working

--- a/stores.html
+++ b/stores.html
@@ -13,7 +13,7 @@
     <tbody id= "table-body">
     </tbody>
   </table>
-  <form action="https://requestb.in/q7bkf7q7" method="POST">
+  <form action="file:///C:/Users/dyell/deltav/dv-201/cookie-stand/stores.html" method="POST">
     <fieldset>
       <legend>Add a store:</legend>
       <ul>
@@ -35,7 +35,7 @@
         </li>
         <li>
           <label>Submit Button</label>
-          <input type= "submit" value= "Submit Button"/>
+          <input id= "submitButton" type= "button" value= "Submit"/>
         </li>
       </ul>
     </fieldset>
