played around with the css, got to a point where I like the general layout

--- a/stores.html
+++ b/stores.html
@@ -3,17 +3,12 @@
 <head>
   <title>Store Data</title>
 </head>
-<body>
-  <header>
-    <h1>Beautiful cookies</h1>
+  <body>
+    <header>
+      <img src= "https://github.com/DeltaVCode/cr-201-2017/blob/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png?raw=true"/>
+      <h1>Pat's Stores' Data</h1>
   </header>
-  <table>
-    <thead id= "table-header">
-    </thead>
-    <tbody id= "table-body">
-    </tbody>
-  </table>
-  <form action="file:///C:/Users/dyell/deltav/dv-201/cookie-stand/stores.html" method="POST">
+  <form>
     <fieldset>
       <legend>Add a store:</legend>
       <ul>
@@ -40,7 +35,16 @@
       </ul>
     </fieldset>
   </form>
+  <div class= "table-div">
+  <table>
+    <thead id= "table-header">
+    </thead>
+    <tbody id= "table-body">
+    </tbody>
+  </table>
+    </div>
   <script src= "model.js"></script>
   <script src= "stores.js"></script>
 </body>
+
 </html>
