added stylesheet to stores.html

--- a/stores.html
+++ b/stores.html
@@ -6,6 +6,7 @@
   <body>
     <header>
       <img src= "https://github.com/DeltaVCode/cr-201-2017/blob/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png?raw=true"/>
+      <link href="styles.css" rel="stylesheet"/>
       <h1>Pat's Stores' Data</h1>
   </header>
   <form>
