--- a/stores.html
+++ b/stores.html
@@ -36,7 +36,7 @@
     </ul>
   </fieldset>
 </form>
-<div class="storelist"></div>
+<div id="storelist"></div>
 <div class= "table-div">
 <table>
   <thead id= "table-header">
@@ -46,7 +46,6 @@
 </table>
   </div>
 <script src= "model.js"></script>
-<script src= "stores.js"></script>
 </body>
 
 </html>
