added some more styling to both pages

--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 <body>
   <header>
     <img src= "https://github.com/DeltaVCode/cr-201-2017/raw/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png"/>
-  </header>
-  <div>
+    <h1>Pat's Salmon Cookies</h1>
     <nav>
       <ul>
         <li><a href= "index.html">Home</a></li>
         <li><a href= "stores.html">Sales</a></li>
       </ul>
     </nav>
-  </div>
+  </header>
 
   <h2>Locations</h2>
   <ul>
