--- a/stores.html
+++ b/stores.html
@@ -8,6 +8,12 @@
   <header>
     <img src= "https://github.com/DeltaVCode/cr-201-2017/blob/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png?raw=true"/>
     <h1>Pat's Stores' Data</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="stores.html">Sales</a></li>
+      </ul>
+    </nav>
 </header>
 <form>
   <fieldset>
@@ -30,7 +36,7 @@
         <input type="text" name="avgPurchased"/>
       </li>
       <li>
-        <label>Submit Button</label>
+        <label>Add New Store</label>
         <input id= "submitButton" type= "button" value= "Submit"/>
       </li>
     </ul>
