added images and started styling index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <img src= "https://github.com/DeltaVCode/cr-201-2017/raw/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png"/>
+    <img src= "img/salmon.png"/>
     <h1>Pat's Salmon Cookies</h1>
     <nav>
       <ul>
@@ -17,14 +17,16 @@
     </nav>
   </header>
 
-  <h2>Locations</h2>
-  <ul>
-    <li>First and Pike</li>
-    <li>Sea Tac Airport</li>
-    <li>Seattle Center</li>
-    <li>Capitol Hill</li>
-    <li>Alki</li>
-  </ul>
+  <aside>
+    <h2>Locations</h2>
+    <ul>
+      <li>First and Pike</li>
+      <li>Sea Tac Airport</li>
+      <li>Seattle Center</li>
+      <li>Capitol Hill</li>
+      <li>Alki</li>
+    </ul>
+  </aside>
 
   <h2>Hours</h2>
   <p>
