got most of the layout figured out, workinng on adding inn content now

--- a/index.html
+++ b/index.html
@@ -28,12 +28,53 @@
     </ul>
   </aside>
 
-  <h2>Hours</h2>
-  <p>
-    All locations are currently open from 6am to 8pm 7 days a week.
-  </p>
-  <h2>Contact Us</h2>
-  <!--stretch goal-->
+  <div class="info">
+    <h2>Store Information:</h2>
+    All locations currently open from 6 am to 8 pm Monday through Sunday
+    <ul>
+      <li>
+        First and Pike
+        <address>71 Pilgrim Avenue<br/>Chevy Chase, MD 20815</address>
+        Phone: 202-555-0152
+      </li>
+      <li>
+        Sea Tac Airport
+        <address>514 S. Magnolia St.<br/>Orlando, FL 32806</address>
+        Phone: 202-555-0119
+      </li>
+      <li>
+        Seattle Center
+        <address>70 Bowman St.<br/>South Windsor, CT 06074</address>
+        Phone: 202-555-0148
+      </li>
+      <li>
+        Capitol Hill
+        <address>70 Bowman St.<br/>South Windsor, CT 06074</address>
+        Phone: 202-555-0142
+      </li>
+      <li>
+        Alki
+        <address>70 Bowman St.<br/>South Windsor, CT 06074</address>
+        Phone: 202-555-0186
+      </li>
+    </ul>
+  </div>
+
+    <div class="merchandise">
+      <h2>Merchandise:</h2>
+      <figure>
+        <img src="img\cutter.jpeg"/>
+        <figcaption>Salmon Cookie cookie cutter</figcaption>
+      </figure>
+      <figure>
+        <img src="img\shirt.jpg"/>
+        <figcaption>Salmon T-shirt</figcaption>
+      </figure>
+    </div>
+
+  <footer>
+    <img id="footerimage" src="img\family.jpg"/>
+  </footer>
 
 </body>
 </html>
