got everything positions well except for the footer

--- a/index.html
+++ b/index.html
@@ -70,10 +70,19 @@
         <img src="img\shirt.jpg"/>
         <figcaption>Salmon T-shirt</figcaption>
       </figure>
+      <figure>
+        <img src="img\frosted-cookie.jpg"/>
+        <figcaption>Salmon Cookies</figcaption>
+      </figure>
     </div>
 
   <footer>
     <img id="footerimage" src="img\family.jpg"/>
+    <div>
+      <h4>Meet the Family</h4>
+      <p>This is Pat and his family(left), and their pet salmon, Fred(right).</p>
+    </div>
+    <img id="footerimage2" src="img\chinook.jpg"/>
   </footer>
 
 </body>
