--- a/stores.html
+++ b/stores.html
@@ -42,7 +42,9 @@
     </ul>
   </fieldset>
 </form>
-<div id="storelist"></div>
+<div class="imagediv">
+  <img src="img\fish.jpg">
+</div>
 <div class= "table-div">
 <table>
   <thead id= "table-header">
